--- a/src/public/global.css
+++ b/src/public/global.css
@@ -1,31 +1,92 @@
+* {
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
 }
 
 .container {
   width: 80%;
   margin: 0 auto;
   text-align: center;
+  padding: 20px;
 }
 
-input,
-button {
+input {
   margin: 10px;
   padding: 10px;
   font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 0.375rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 #results {
   margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .product {
-  border: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 200px;
+  margin: 10px;
+  background-color: #f9f7f3;
+  border: 1px solid #ffffff;
+  border-radius: 0.375rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   padding: 10px;
-  margin: 10px 0;
-  text-align: left;
+  text-align: center;
+  transition: transform 0.2s ease-in-out;
+}
+
+.product:hover {
+  transform: scale(1.05);
+}
+
+.product h2 {
+  font-size: 18px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  line-height: 1.5;
+}
+
+.product p {
+  margin: 5px 0;
+  font-size: 14px;
 }
 
 .product img {
-  max-width: 100px;
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+@media (min-width: 1024px) {
+  .product {
+    width: calc(25% - 20px);
+  }
+}
+
+@media (max-width: 768px) {
+  .product {
+    width: calc(50% - 20px);
+  }
+}
+
+@media (max-width: 480px) {
+  .product {
+    width: calc(100% - 20px);
+  }
 }
